Update Node.java
integer constructor changed